# sqlx-migrate

./: Cargo.toml  LICENSE  README.md
common/: Cargo.toml
common/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs
tests/: integration_test.rs
tests/stubs/simple/: 1614877844_simple_migration.sql
